samples/_failures_safe/1761214323_c3fcbb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0da5b33.c: In function ‘main’:
./samples/SAFE/__tmp_f0da5b33.c:160:17: error: expected expression at end of input
  160 |                 if (multiply_matrices(&a, &
      |                 ^~
./samples/SAFE/__tmp_f0da5b33.c:160:21: error: too few arguments to function ‘multiply_matrices’
  160 |                 if (multiply_matrices(&a, &
      |                     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f0da5b33.c:71:5: note: declared here
   71 | int multiply_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f0da5b33.c:160:17: error: expected declaration or statement at end of input
  160 |                 if (multiply_matrices(&a, &
      |                 ^~
./samples/SAFE/__tmp_f0da5b33.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f0da5b33.c:160:17: error: expected declaration or statement at end of input
